Sat Nov  1 08:21:33 CET 2014
n/squidanalyzer-5.3-i486-1_microlinux.txz: Added.
n/squidGuard-1.4-i486-5_microlinux.txz: Rebuilt.
  Include sample CGI scripts in /usr/doc/squidGuard-1.4/samples/.
+--------------------------+
Fri Sep 26 15:20:55 CEST 2014
ap/slackpkg+-1.3.2-noarch-2_microlinux.txz: Rebuilt.
  Fixed ready-to-use slackpkgplus.conf.
+--------------------------+
Fri Sep 12 07:28:51 CEST 2014
profile/user-settings-console-1.0-noarch-5_microlinux.txz: Added.
ap/sbopkg-0.36.0-noarch-4_microlinux.txz: Added.
ap/recode-3.6-i486-5_microlinux.txz: Added.
ap/unrar-5.0.14-i486-1_microlinux.txz: Added.
ap/p7zip-9.20.1-i486-4_microlinux.txz: Added.
ap/pwgen-2.06-i486-4_microlinux.txz: Added.
d/perl-IO-Multiplex-1.13-i486-4_microlinux.txz: Added.
d/perl-digest-sha1-2.13-i486-4_microlinux.txz: Added.
d/perl-digest-hmac-1.03-i486-4_microlinux.txz: Added.
d/perl-net-ip-1.26-i486-4_microlinux.txz: Added.
d/perl-net-dns-0.72-i486-4_microlinux.txz: Added.
d/perl-Net-Server-2.007-i486-4_microlinux.txz: Added.
d/perl-BerkeleyDB-0.53-i486-1_microlinux.txz: Added.
multimedia/faad2-2.7-i486-4_microlinux.txz: Added.
multimedia/lame-3.99.5-i486-4_microlinux.txz: Added.
multimedia/libcuefile-r475-i486-1_microlinux.txz: Added.
multimedia/libmms-0.6.2-i486-4_microlinux.txz: Added.
multimedia/libmp4v2-2.0.0-i486-4_microlinux.txz: Added.
multimedia/libreplaygain-r475-i486-1_microlinux.txz: Added.
multimedia/speex-1.2rc1-i486-4_microlinux.txz: Added.
multimedia/twolame-0.3.13-i486-4_microlinux.txz: Added.
multimedia/faac-1.28-i486-5_microlinux.txz: Added.
multimedia/ffmpeg-0.11.1-i486-5_microlinux.txz: Added.
multimedia/musepack-tools-r475-i486-1_microlinux.txz: Added.
multimedia/libshout-2.3.1-i486-1_microlinux.txz: Added.
l/libmpdclient-2.7-i486-4_microlinux.txz: Added.
l/libsigc++-2.2.11-i486-1_microlinux.txz: Added.
l/libtorrent-0.13.0-i486-4_microlinux.txz: Added.
l/pysetuptools-2.1-i486-2_microlinux.txz: Added.
l/psutil-1.2.1-i486-2_microlinux.txz: Added.